--- a/基本语法/变量声明.html
+++ b/基本语法/变量声明.html
@@ -8,21 +8,13 @@
   </head>
   <body>
     <script>
-      // 1.变量声明
-      // 变量的声明分为声明与赋值两个部分
-      var a; // var a 这个整体称为变量的声明
-      a = 2; // a = 2 为赋值
-
-      // 2. 单一var声明法
-      // 当要命名多个变量的时候，不建议一下做法
-      var a = 1;
-      var b = 2;
-      var c = 3;
-
-      // 采用单一var模式
-      var a = 1,
-        b = 2,
-        c = 3;
+      // a++与++a
+      // ++在前：先执行++，在执行 本条语句
+      // ++在后：先执行本条语句，再执行++
+      var a = 10;
+      var b = ++a - 1 + a++;
+      // 先执行++a，a = 11，然后11 - 1 = 10，此时的a已经是11了，10 + 11 = 21，然后执行a++，a = 12
+      console.log(b, a); // 21 12
     </script>
   </body>
 </html>
