--- a/基本语法/变量声明.html
+++ b/基本语法/变量声明.html
@@ -8,13 +8,65 @@
   </head>
   <body>
     <script>
-      // a++与++a
-      // ++在前：先执行++，在执行 本条语句
-      // ++在后：先执行本条语句，再执行++
-      var a = 10;
-      var b = ++a - 1 + a++;
-      // 先执行++a，a = 11，然后11 - 1 = 10，此时的a已经是11了，10 + 11 = 21，然后执行a++，a = 12
-      console.log(b, a); // 21 12
+      // 1. 运算符
+      // // a++与++a
+      // // ++在前：先执行++，在执行 本条语句
+      // // ++在后：先执行本条语句，再执行++
+      // var a = 10;
+      // var b = ++a - 1 + a++;
+      // // 先执行++a，a = 11，然后11 - 1 = 10，此时的a已经是11了，10 + 11 = 21，然后执行a++，a = 12
+      // console.log(b, a); // 21 12
+
+      // var a = (10 * 3 - 4 / 2 + 1) % 2,
+      //   b = 3;
+      // b %= a + 3;
+      // console.log(a++); // 先执行log语句，打印a = 1，然后执行a++，a = 2
+      // console.log(--b); // 2
+
+      // var a = 123;
+      // var b = 234;
+      // // 经过计算交换a,b的值
+      // // 方法一；中间变量
+      // // var c = a;
+      // // a = b;
+      // // b = c;
+      // // console.log(a, b);
+      // // 方法二：求和
+      // // a = a + b;
+      // // b = a - b;
+      // // a = a - b;
+      // // console.log(a, b);
+
+      // // 字符串的比较，比较的是ASC码的顺序
+      // var a = "10" > "8";
+      // console.log(a); // false
+      // // 不是10和8比，是字符串一零与字符串八比较，先用开头的一与八比，比不过就不看第二位了
+
+      // 2. 条件语句
+      // for (var i = 0; i < 10; i++) {}
+      // // 执行顺序
+      // var i = 0;
+      // if (i < 10) {
+      // }
+      // i++; // i = 1；
+      // if (i < 10) {
+      // }
+      // i++; // i = 2
+
+      // 0! = 1 * 1
+      // 1! = 1 * 1
+      // 2! = 2 * 1
+      // 3! = 3 * 2 * 1
+      // 4! = 4 * 3 * 2 *1
+
+      var n = parseInt(window.prompt("input"));
+
+      var mul = 1;
+      for (var i = 1; i <= n; i++) {
+        mul *= i;
+      }
+
+      console.log(mul);
     </script>
   </body>
 </html>
